--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ dmypy.json
 Python-Projects.code-workspace
 .vscode/launch.json
 .~lock.planets.ods#
+character_generator/space trader thing/.~lock.NEW_HAVEN.ods#
