--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ Python-Projects.code-workspace
 .vscode/launch.json
 .~lock.planets.ods#
 character_generator/space trader thing/.~lock.NEW_HAVEN.ods#
+NEW HAVEN/.~lock.NEW_HAVEN.xlsx#
