--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ Python-Projects.code-workspace
 .~lock.planets.ods#
 character_generator/space trader thing/.~lock.NEW_HAVEN.ods#
 NEW HAVEN/.~lock.NEW_HAVEN.xlsx#
+NEW HAVEN/NEW_HAVEN.xlsx
+
